objects/revcult__Compliance_Categorization__c.object
<CustomObject>
    <fields>
        <fullName>revcult__Color__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revcult__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>revcult__Icon__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Icon</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revcult__Num_of_Fields_Categorized__c</fullName>
        <label>Num of Fields Categorized</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Compliance Categorization</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Compliance Categorization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compliance Categorizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>